--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 *{
     padding: 0;
     margin: 0;
@@ -21,7 +19,7 @@ html {
     justify-content: center;
 }
 #hero {
-    background-image: linear-gradient(to right, #7da8da 0%, #e7f0fd 100%);
+    background-image: linear-gradient(to bottom, #6c9cd3 0%, #e7f0fd 100%);
     background-size: cover;
     background-position: top cover;
     position: relative;
@@ -82,3 +80,27 @@ a {
 .card-img-top {
     box-shadow: 0 0 20px 7px rgba(0, 0, 0, 0.3);
 }
+.button {
+    display: inline-block;
+    padding: 5px 20px;
+    font-size: 1rem;
+    margin-top: 30px;
+    transition: .3s ease;
+    border: 2px solid #7da8da;
+    color: #7da8da;
+    margin-top: 0.5rem;
+}
+.button:hover {
+    background-color: #7da8da;
+    border: 2px solid #7da8da;
+    color: white;
+    text-decoration: none;
+}
+#technical-skills {
+    text-align: center;
+}
+.style {
+    color: white;
+}
+
+
