--- a/style.css
+++ b/style.css
@@ -135,69 +135,32 @@ a {
     justify-content: center;
     align-items: center;
   }
-  #loader {
-    /* Uncomment this to make it run! */
-    /*
-       animation: loader 5s linear infinite; 
-    */
-    
-    position: absolute;
-    top: calc(50% - 20px);
-    left: calc(50% - 20px);
+  .loader {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    position: relative;
+    border: 4px solid #Fff;
+    animation: loader 2s infinite ease;
+  }
+  .loader-inner {
+    vertical-align: top;
+    display: inline-block;
+    width: 100%;
+    background-color: #fff;
+    animation: loader-inner 2s infinite ease-in;
   }
   @keyframes loader {
-    0% { left: -100px }
-    100% { left: 110%; }
+    0% { transform: rotate(0deg);}
+    25% { transform: rotate(180deg);}
+    50% { transform: rotate(180deg);}
+    75% { transform: rotate(360deg);}
+    100% { transform: rotate(360deg);}
   }
-  #box {
-    width: 50px;
-    height: 50px;
-    background: #fff;
-    animation: animate .5s linear infinite;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 3px;
-  }
-  @keyframes animate {
-    17% { border-bottom-right-radius: 3px; }
-    25% { transform: translateY(9px) rotate(22.5deg); }
-    50% {
-      transform: translateY(18px) scale(1,.9) rotate(45deg) ;
-      border-bottom-right-radius: 40px;
-    }
-    75% { transform: translateY(9px) rotate(67.5deg); }
-    100% { transform: translateY(0) rotate(90deg); }
-  } 
-  #shadow { 
-    width: 50px;
-    height: 5px;
-    background: #000;
-    opacity: 0.1;
-    position: absolute;
-    top: 59px;
-    left: 0;
-    border-radius: 50%;
-    animation: shadow .5s linear infinite;
-  }
-  @keyframes shadow {
-    50% {
-      transform: scale(1.2,1);
-    }
-  }
-  
-  
-  body {
-    background: #6997DB; 
-    overflow: hidden;
-  }
-  h4 {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    margin: 0;
-    font-weight: 200;
-    opacity: .5;
-      font-family: sans-serif;
-    color: #fff;
+  @keyframes loader-inner {
+    0% { height: 0%;}
+    25% { height: 0%;}
+    50% { height: 100%;}
+    75% { height: 100%;}
+    100% { height: 0%;}
   }
