--- a/style.css
+++ b/style.css
@@ -164,3 +164,39 @@ a {
     75% { height: 100%;}
     100% { height: 0%;}
   }
+  ul {
+      list-style-type: none;
+      font-family: Cousine;
+      font-size: 1rem;
+  }
+  .card-wrapper {
+      height: 400px;
+      width: 300px;
+      perspective: 1000px;
+  }
+  .content {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      transition: transform 0.8s;
+      transform-style: preserve-3d;
+  }
+  .card-wrapper:hover .content {
+      transform: rotateY(180deg);
+      transition: 1s;
+  }
+  .face-front, .face-back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-color: white;
+      color: black;
+  }
+  .face-back {
+      transform: rotateY(180deg);
+    }
+    .flex-item {
+        margin: 5px;
+      }
+    
