--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ html {
     background-image: linear-gradient(to right, #7da8da 0%, #e7f0fd 100%);
 }
 .img {
-    width: 300px;
-    height: 300px;
+    width: 16rem;
+    height: 16rem;
 }
 .container {
     min-height: 100vh; /*viewport height*/
